situation_api.h

typedef union Vector2 {
    struct { float x, y; };
    float raw[2];
} Vector2;
typedef enum {
    SIT_RENDERER_OPENGL,
    SIT_RENDERER_VULKAN
} SituationRendererType;
typedef struct {
    uint32_t slot_index;
    uint32_t generation;
    int index_count;        
    int vertex_count;       
    size_t vertex_stride;   
} SituationMesh;
typedef struct {
    uint32_t slot_index;    
    uint32_t generation;    
    int width;              
    int height;             
} SituationTexture;
typedef struct SituationFont {
    void *fontData;                                 
    void *stbFontInfo;                              
    SituationTexture atlas_texture;
    void* glyph_info; 
    int atlas_width;
    int atlas_height;
    float font_height_pixels; 
    bool is_bitmap;
    const unsigned char* bitmap_data;
    int bitmap_width;   
    int bitmap_height;  
    int bitmap_count;   
} SituationFont;
typedef struct {
    uint32_t slot_index;
    uint32_t generation;
} SituationSound;
SITAPI int SituationGetScreenWidth(void);                                               
SITAPI int SituationGetScreenHeight(void);                                              
SITAPI int SituationGetRenderWidth(void);                                               
SITAPI int SituationGetRenderHeight(void);                                              
SITAPI int SituationGetMonitorCount(void);                                              
SITAPI const char* SituationGetMonitorName(int monitor_id);                             
SITAPI int SituationGetMonitorWidth(int monitor_id);                                    
SITAPI int SituationGetMonitorHeight(int monitor_id);                                   
SITAPI int SituationGetMonitorPhysicalWidth(int monitor_id);                            
SITAPI int SituationGetMonitorPhysicalHeight(int monitor_id);                           
SITAPI int SituationGetMonitorRefreshRate(int monitor_id);                              
SITAPI Vector2 SituationGetMonitorPosition(int monitor_id);                             
SITAPI size_t SituationGetRenderQueueDepth(void);                                       
SITAPI void SituationGetRenderLatencyStats(uint64_t* avg_ns, uint64_t* max_ns);         
SITAPI SituationRendererType SituationGetRendererType(void);                            
SITAPI Vector2 SituationGetMousePosition(void);                                         
SITAPI Vector2 SituationGetMouseDelta(void);                                            
SITAPI float SituationGetMouseWheelMove(void);                                          
SITAPI Vector2 SituationGetMouseWheelMoveV(void);                                       
SITAPI float SituationGetSoundVolume(SituationSound* sound);                            
SITAPI float SituationGetSoundPan(SituationSound* sound);                               
SITAPI float SituationGetSoundPitch(SituationSound* sound);                             