situation_240_MT_work_in_progress.h


static const char* SIT_VD_VERTEX_SHADER_SRC =
    "#version 450 core\n"
    "layout(location = " SIT_STRINGIFY(SIT_ATTR_POSITION) ") in vec2 aPos;\n"
    "layout(location = " SIT_STRINGIFY(SIT_ATTR_TEXCOORD_0) ") in vec2 aTexCoords;\n"
    "layout(location = 0) out vec2 v_texCoord;\n"
    "\n"
#if defined(SITUATION_USE_VULKAN)
    "layout(set = 0, binding = " SIT_STRINGIFY(SIT_UBO_BINDING_VIEW_DATA) ") uniform UboView { mat4 view; mat4 projection; } ubo;\n"
    "layout(push_constant) uniform VDPushConstants { mat4 model; float opacity; } pc;\n"
    "void main() {\n"
    "    gl_Position = ubo.projection * pc.model * vec4(aPos, 0.0, 1.0);\n"
    "    v_texCoord = aTexCoords;\n"
    "}\n"
#elif defined(SITUATION_USE_OPENGL)
    "layout(location = " SIT_STRINGIFY(SIT_UNIFORM_LOC_PROJECTION_MATRIX) ") uniform mat4 u_projection;\n"
    "layout(location = " SIT_STRINGIFY(SIT_UNIFORM_LOC_MODEL_MATRIX) ") uniform mat4 u_model;\n"
    "void main() {\n"
    "    gl_Position = u_projection * u_model * vec4(aPos, 0.0, 1.0);\n"
    "    v_texCoord = aTexCoords;\n"
    "}\n"
#endif
static const char* SIT_VD_FRAGMENT_SHADER_SRC =
    "#version 450 core\n"
    "layout(location = 0) in vec2 v_texCoord;\n"
    "layout(location = 0) out vec4 outColor;\n"
    "\n"
    "layout(binding = " SIT_STRINGIFY(SIT_SAMPLER_BINDING_VD_SOURCE) ") uniform sampler2D u_screenTexture;\n"
    "\n"
#if defined(SITUATION_USE_VULKAN)
    "layout(push_constant) uniform VDPushConstants { mat4 model; float opacity; } pc;\n"
    "void main() {\n"
    "    vec4 texColor = texture(u_screenTexture, v_texCoord);\n"
    "    outColor = vec4(texColor.rgb, texColor.a * pc.opacity);\n"
    "}\n"
#elif defined(SITUATION_USE_OPENGL)
    "layout(location = " SIT_STRINGIFY(SIT_UNIFORM_LOC_OPACITY) ") uniform float u_opacity;\n"
    "void main() {\n"
    "    vec4 texColor = texture(u_screenTexture, v_texCoord);\n"
    "    outColor = vec4(texColor.rgb, texColor.a * u_opacity);\n"
    "}\n"
#endif
static const char* SIT_COMPOSITE_VERTEX_SHADER_SRC =
    "#version 450 core\n"
    "layout(location = " SIT_STRINGIFY(SIT_ATTR_POSITION) ") in vec2 aPos;\n"
    "layout(location = " SIT_STRINGIFY(SIT_ATTR_TEXCOORD_0) ") in vec2 aTexCoords;\n"
    "layout(location = 0) out vec2 v_texCoord;\n"
    "\n"
#if defined(SITUATION_USE_VULKAN)
    "layout(set = 0, binding = " SIT_STRINGIFY(SIT_UBO_BINDING_VIEW_DATA) ") uniform UboView { mat4 view; mat4 projection; } ubo;\n"
    "layout(push_constant) uniform CompositePushConstants { mat4 model; int blendMode; float opacity; } pc;\n"
    "void main() {\n"
    "    gl_Position = ubo.projection * pc.model * vec4(aPos, 0.0, 1.0);\n"
    "    v_texCoord = aTexCoords;\n"
    "}\n"
#elif defined(SITUATION_USE_OPENGL)
    "layout(location = " SIT_STRINGIFY(SIT_UNIFORM_LOC_PROJECTION_MATRIX) ") uniform mat4 u_projection;\n"
    "layout(location = " SIT_STRINGIFY(SIT_UNIFORM_LOC_MODEL_MATRIX) ") uniform mat4 u_model;\n"
    "void main() {\n"
    "    gl_Position = u_projection * u_model * vec4(aPos, 0.0, 1.0);\n"
    "    v_texCoord = aTexCoords;\n"
    "}\n"
#endif
static const char* SIT_COMPOSITE_FRAGMENT_SHADER_SRC =
    "#version 450 core\n"
    "layout(location = 0) in vec2 v_texCoord;\n"
    "layout(location = 0) out vec4 outColor;\n"
    "\n"
    "layout(binding = " SIT_STRINGIFY(SIT_SAMPLER_BINDING_VD_SOURCE) ") uniform sampler2D u_sourceTexture;\n"
    "layout(binding = " SIT_STRINGIFY(SIT_SAMPLER_BINDING_VD_DEST) ") uniform sampler2D u_destinationTexture;\n"
    "\n"
    "float overlay(float b, float l) { return (b < 0.5) ? (2.0*b*l) : (1.0 - 2.0*(1.0-b)*(1.0-l)); }\n"
    "float softlight(float b, float l) { return (l < 0.5) ? (b - (1.0 - 2.0 * l) * b * (1.0 - b)) : (b + (2.0 * l - 1.0) * (((b <= 0.25) ? (((16.0 * b - 12.0) * b + 4.0) * b) : sqrt(b)) - b)); }\n"
    "\n"
#if defined(SITUATION_USE_VULKAN)
    "layout(push_constant) uniform CompositePushConstants { mat4 model; int blendMode; float opacity; } pc;\n"
#elif defined(SITUATION_USE_OPENGL)
    "layout(location = " SIT_STRINGIFY(SIT_UNIFORM_LOC_BLEND_MODE) ") uniform int u_blendMode;\n"
    "layout(location = " SIT_STRINGIFY(SIT_UNIFORM_LOC_OPACITY) ") uniform float u_opacity;\n"
#endif
static const char* SIT_QUAD_VERTEX_SHADER =
    "#version 450 core\n"
    "layout(location = " SIT_STRINGIFY(SIT_ATTR_POSITION) ") in vec2 aPos;\n"
    "layout(location = 0) out vec2 v_TexCoord;\n"
    "\n"
#if defined(SITUATION_USE_VULKAN)
    "layout(set = 0, binding = " SIT_STRINGIFY(SIT_UBO_BINDING_VIEW_DATA) ") uniform UboView { mat4 view; mat4 projection; } ubo;\n"
    "layout(push_constant) uniform QuadPushConstants { mat4 model; vec4 color; vec4 uv_rect; } pc;\n"
    "\n"
    "void main() {\n"
    "    gl_Position = ubo.projection * pc.model * vec4(aPos, 0.0, 1.0);\n"
    "    
    "    v_TexCoord = pc.uv_rect.xy + (aPos * pc.uv_rect.zw);\n"
    "}\n"
#elif defined(SITUATION_USE_OPENGL)
    "layout(location = " SIT_STRINGIFY(SIT_UNIFORM_LOC_PROJECTION_MATRIX) ") uniform mat4 u_projection;\n"
    "layout(location = " SIT_STRINGIFY(SIT_UNIFORM_LOC_MODEL_MATRIX) ") uniform mat4 u_model;\n"
    "layout(location = 5) uniform vec4 u_uv_rect;\n"
    "\n"
    "void main() {\n"
    "    gl_Position = u_projection * u_model * vec4(aPos, 0.0, 1.0);\n"
    "    v_TexCoord = u_uv_rect.xy + (aPos * u_uv_rect.zw);\n"
    "}\n"
#endif
static const char* SIT_QUAD_FRAGMENT_SHADER =
    "#version 450 core\n"
    "layout(location = 0) in vec2 v_TexCoord;\n"
    "layout(location = 0) out vec4 outColor;\n"
    "\n"
    "layout(binding = " SIT_STRINGIFY(SIT_SAMPLER_BINDING_ALBEDO) ") uniform sampler2D u_Texture;\n"
    "\n"
#if defined(SITUATION_USE_VULKAN)
    "layout(push_constant) uniform QuadPushConstants { mat4 model; vec4 color; vec4 uv_rect; int use_texture; } pc;\n"
    "void main() {\n"
    "    vec4 texColor = vec4(1.0);\n"
    "    if (pc.use_texture == 1) texColor = texture(u_Texture, v_TexCoord);\n"
    "    
    "    
    "    
    "    outColor = texColor * pc.color;\n"
    "}\n"
#elif defined(SITUATION_USE_OPENGL)
    "layout(location = " SIT_STRINGIFY(SIT_UNIFORM_LOC_OBJECT_COLOR) ") uniform vec4 u_objectColor;\n"
    "layout(location = 6) uniform int u_use_texture;\n"
    "void main() {\n"
    "    vec4 texColor = vec4(1.0);\n"
    "    if (u_use_texture == 1) texColor = texture(u_Texture, v_TexCoord);\n"
    "    outColor = texColor * u_objectColor;\n"
    "}\n"
#endif