wrappers/Fortran/src/situation_foreign.f90


    ! Query layout tag stored at creation.
    function SituationGetMeshVertexLayout(mesh, out_layout) bind(C, name='SituationGetMeshVertexLayout') result(res)
      import :: SituationMesh, c_int
      integer(c_int) :: res
      type(SituationMesh), value :: mesh
      integer(c_int), value :: out_layout
    end function SituationGetMeshVertexLayout

    ! PortMidi device name for device_id (hardware or virtual).
    function SituationGetMidiDeviceName(device_id, out_name, out_name_size) bind(C, name='SituationGetMidiDeviceName') result(res)
      import :: c_int, c_ptr, c_size_t
      integer(c_int) :: res
      integer(c_int), value :: device_id
      type(c_ptr), value :: out_name
      integer(c_size_t), value :: out_name_size
    end function SituationGetMidiDeviceName

    ! Get the number of connected monitors.
    function SituationGetMonitorCount() bind(C, name='SituationGetMonitorCount') result(res)
      import :: c_int
      integer(c_int) :: res
    end function SituationGetMonitorCount

    ! Get the height of a monitor's current video mode.
    function SituationGetMonitorHeight(monitor_id) bind(C, name='SituationGetMonitorHeight') result(res)
      import :: c_int
      integer(c_int) :: res
      integer(c_int), value :: monitor_id
    end function SituationGetMonitorHeight

    ! Get the human-readable name of a monitor.
    function SituationGetMonitorName(monitor_id) bind(C, name='SituationGetMonitorName') result(res)
      import :: c_int, c_ptr
      type(c_ptr) :: res
      integer(c_int), value :: monitor_id
    end function SituationGetMonitorName

    ! Get the physical height of a monitor in millimeters.
    function SituationGetMonitorPhysicalHeight(monitor_id) bind(C, name='SituationGetMonitorPhysicalHeight') result(res)
      import :: c_int
      integer(c_int) :: res
      integer(c_int), value :: monitor_id
    end function SituationGetMonitorPhysicalHeight

    ! Get the physical width of a monitor in millimeters.
    function SituationGetMonitorPhysicalWidth(monitor_id) bind(C, name='SituationGetMonitorPhysicalWidth') result(res)
      import :: c_int
      integer(c_int) :: res
      integer(c_int), value :: monitor_id
    end function SituationGetMonitorPhysicalWidth

    ! Get the top-left position of a monitor on the desktop.
    function SituationGetMonitorPosition(monitor_id) bind(C, name='SituationGetMonitorPosition') result(res)
      import :: Vector2, c_int
      type(Vector2) :: res
      integer(c_int), value :: monitor_id
    end function SituationGetMonitorPosition

    ! Get the refresh rate of a monitor.
    function SituationGetMonitorRefreshRate(monitor_id) bind(C, name='SituationGetMonitorRefreshRate') result(res)
      import :: c_int
      integer(c_int) :: res
      integer(c_int), value :: monitor_id
    end function SituationGetMonitorRefreshRate

    ! Get the width of a monitor's current video mode.
    function SituationGetMonitorWidth(monitor_id) bind(C, name='SituationGetMonitorWidth') result(res)
      import :: c_int
      integer(c_int) :: res
      integer(c_int), value :: monitor_id
    end function SituationGetMonitorWidth

    ! Get the mouse movement since the last frame.
    function SituationGetMouseDelta() bind(C, name='SituationGetMouseDelta') result(res)
      import :: Vector2
      type(Vector2) :: res
    end function SituationGetMouseDelta

    ! Get the mouse position within the window.
    function SituationGetMousePosition() bind(C, name='SituationGetMousePosition') result(res)
      import :: Vector2
      type(Vector2) :: res
    end function SituationGetMousePosition

    ! Get vertical mouse wheel movement.
    function SituationGetMouseWheelMove() bind(C, name='SituationGetMouseWheelMove') result(res)
      import :: c_float
      real(c_float) :: res
    end function SituationGetMouseWheelMove

    ! Get vertical and horizontal mouse wheel movement.
    function SituationGetMouseWheelMoveV() bind(C, name='SituationGetMouseWheelMoveV') result(res)
      import :: Vector2
      type(Vector2) :: res
    end function SituationGetMouseWheelMoveV

    ! Number of network adapters reported by the OS.
    function SituationGetNetworkAdapterCount() bind(C, name='SituationGetNetworkAdapterCount') result(res)
      import :: c_int
      integer(c_int) :: res
    end function SituationGetNetworkAdapterCount

    function SituationGetNetworkAdapterName(index, out_name, name_len) bind(C, name='SituationGetNetworkAdapterName') result(res)
      import :: c_bool, c_int, c_ptr
      logical(c_bool) :: res
      integer(c_int), value :: index
      type(c_ptr), value :: out_name
      integer(c_int), value :: name_len
    end function SituationGetNetworkAdapterName

    ! Get a direct pointer to a node (for advanced use).
    function SituationGetNode(graph, handle) bind(C, name='SituationGetNode') result(res)
      import :: c_int32_t, c_ptr
      type(c_ptr) :: res
      type(c_ptr), value :: graph
      integer(c_int32_t), value :: handle
    end function SituationGetNode

    ! Query how many frames of space are available in the PCM_INPUT node's ring buffer.
    function SituationGetNodePCMFreeFrames(graph, node) bind(C, name='SituationGetNodePCMFreeFrames') result(res)
      import :: c_int32_t, c_ptr
      integer(c_int32_t) :: res
      type(c_ptr), value :: graph
      integer(c_int32_t), value :: node
    end function SituationGetNodePCMFreeFrames

    ! Cached NUMA snapshot
    function SituationGetNumaTopology(out_topology) bind(C, name='SituationGetNumaTopology') result(res)
      import :: c_int, c_ptr
      integer(c_int) :: res
      type(c_ptr), value :: out_topology
    end function SituationGetNumaTopology

    ! Get operating system name, version, and build number.
    function SituationGetOSInfo() bind(C, name='SituationGetOSInfo') result(res)
      import :: SituationOSInfo
      type(SituationOSInfo) :: res
    end function SituationGetOSInfo

    ! TLS: node for current thread, or -1 if unset
    function SituationGetPreferredNumaNode() bind(C, name='SituationGetPreferredNumaNode') result(res)
      import :: c_int
      integer(c_int) :: res
    end function SituationGetPreferredNumaNode

    ! Get snapshot of running OS processes. Caller must free with SituationFreeProcessList().
    function SituationGetProcessList(out_count) bind(C, name='SituationGetProcessList') result(res)
      import :: c_ptr
      type(c_ptr) :: res
      type(c_ptr), value :: out_count
    end function SituationGetProcessList

    ! Pending jobs per queue mask
    function SituationGetQueueDepth(pool, mask) bind(C, name='SituationGetQueueDepth') result(res)
      import :: c_int, c_ptr, c_size_t
      integer(c_size_t) :: res
      type(c_ptr), value :: pool
      integer(c_int), value :: mask
    end function SituationGetQueueDepth

    ! Sizing helper (no pool required)
    function SituationGetRecommendedWorkerCount(reserved_threads, use_physical_cores) bind(C, name='SituationGetRecommendedWorkerCount') result(res)
      import :: c_bool, c_int32_t
      integer(c_int32_t) :: res
      integer(c_int32_t), value :: reserved_threads
      logical(c_bool), value :: use_physical_cores
    end function SituationGetRecommendedWorkerCount

    ! Get the number of registered audio device types.
    function SituationGetRegisteredDeviceCount() bind(C, name='SituationGetRegisteredDeviceCount') result(res)
      import :: c_int
      integer(c_int) :: res
    end function SituationGetRegisteredDeviceCount

    ! Get the current render height (backbuffer size, considers HiDPI).
    function SituationGetRenderHeight() bind(C, name='SituationGetRenderHeight') result(res)
      import :: c_int
      integer(c_int) :: res
    end function SituationGetRenderHeight

    ! Get render thread latency metrics
    subroutine SituationGetRenderLatencyStats(avg_ns, max_ns) bind(C, name='SituationGetRenderLatencyStats')
      import :: c_ptr
      type(c_ptr), value :: avg_ns
      type(c_ptr), value :: max_ns
    end subroutine SituationGetRenderLatencyStats

    ! Get the current depth of the render queue
    function SituationGetRenderQueueDepth() bind(C, name='SituationGetRenderQueueDepth') result(res)
      import :: c_size_t
      integer(c_size_t) :: res
    end function SituationGetRenderQueueDepth

    ! Get the current render width (backbuffer size, considers HiDPI).
    function SituationGetRenderWidth() bind(C, name='SituationGetRenderWidth') result(res)
      import :: c_int
      integer(c_int) :: res
    end function SituationGetRenderWidth

    ! Legacy — prefer SituationGetGraphicsBackend() + SituationGetGraphicsCaps().
    function SituationGetRendererType() bind(C, name='SituationGetRendererType') result(res)
      import :: c_int
      integer(c_int) :: res
    end function SituationGetRendererType

    ! Get the current logical height of the window.
    function SituationGetScreenHeight() bind(C, name='SituationGetScreenHeight') result(res)
      import :: c_int
      integer(c_int) :: res
    end function SituationGetScreenHeight

    ! Get the current logical width of the window.
    function SituationGetScreenWidth() bind(C, name='SituationGetScreenWidth') result(res)
      import :: c_int
      integer(c_int) :: res
    end function SituationGetScreenWidth

    ! Get the current default screenshot format.
    function SituationGetScreenshotFormat() bind(C, name='SituationGetScreenshotFormat') result(res)
      import :: c_int
      integer(c_int) :: res
    end function SituationGetScreenshotFormat

    ! Get the current serialization format version string.
    function SituationGetSerializationVersion() bind(C, name='SituationGetSerializationVersion') result(res)
      import :: c_ptr
      type(c_ptr) :: res
    end function SituationGetSerializationVersion

    ! Get the stereo pan of a sound.
    function SituationGetSoundPan(sound) bind(C, name='SituationGetSoundPan') result(res)
      import :: c_float, c_ptr
      real(c_float) :: res
      type(c_ptr), value :: sound
    end function SituationGetSoundPan

    ! Get the pitch of a sound.
    function SituationGetSoundPitch(sound) bind(C, name='SituationGetSoundPitch') result(res)
      import :: c_float, c_ptr
      real(c_float) :: res
      type(c_ptr), value :: sound
    end function SituationGetSoundPitch

    ! Get the volume of a specific sound.
    function SituationGetSoundVolume(sound) bind(C, name='SituationGetSoundVolume') result(res)
      import :: c_float, c_ptr
      real(c_float) :: res
      type(c_ptr), value :: sound
    end function SituationGetSoundVolume

    function SituationGetStorageDevice(index, out_name, name_len, out_capacity_bytes, out_free_bytes) bind(C, name='SituationGetStorageDevice') result(res)
      import :: c_bool, c_int, c_ptr
      logical(c_bool) :: res
      integer(c_int), value :: index
      type(c_ptr), value :: out_name
      integer(c_int), value :: name_len
      type(c_ptr), value :: out_capacity_bytes
      type(c_ptr), value :: out_free_bytes
    end function SituationGetStorageDevice

    ! Number of storage volumes reported by the OS.
    function SituationGetStorageDeviceCount() bind(C, name='SituationGetStorageDeviceCount') result(res)
      import :: c_int
      integer(c_int) :: res
    end function SituationGetStorageDeviceCount

    ! Lines required for width constraint (grid/TTF).
    function SituationGetTextLineCount(font, max_width) bind(C, name='SituationGetTextLineCount') result(res)
      import :: SituationFont, c_float, c_int
      integer(c_int) :: res
      type(SituationFont), value :: font
      real(c_float), value :: max_width
    end function SituationGetTextLineCount
